--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: engage_app
+name: task_queues_app
 description: A new Flutter application.
 
 # The following defines the version and build number for your application.
@@ -43,6 +43,7 @@ dependencies:
   flutter_keyboard_visibility: ^5.0.3
   syncfusion_flutter_charts: ^19.2.56
   expandable: ^5.0.1
+  drag_and_drop_lists: ^0.2.1
 
 
 dev_dependencies:
@@ -86,17 +87,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Poppins-Bold
+      fonts:
+        - asset: assets/fonts/Poppins-Bold.ttf
+    - family: Poppins-Semibold
+      fonts:
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+    - family: Poppins-Medium
+      fonts:
+        - asset: assets/fonts/Poppins-Medium.ttf
+    - family: Poppins-Light
+      fonts:
+        - asset: assets/fonts/Poppins-Light.ttf
+    - family: Poppins-Regular
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
@@ -106,12 +113,12 @@ flutter_intl:
   class_name: s # Optional. Sets the name for the generated localization class. Default: S
   main_locale: en # Optional. Sets the main locale used for generating localization files. Provided value should comply with ISO-639-1 and ISO-3166-1 (e.g. "en", "en_GB"). Default: en
 
-flutter_native_splash:
-  image: assets/images/logo2.png
-  color: "FFFFFF"
+#flutter_native_splash:
+ # image: assets/images/logo2.png
+ # color: "FFFFFF"
 #  android_disable_fullscreen: true
-  android: true
-  ios: true
+# android: true
+ # ios: true
 
 flutter_icons:
   image_path: 'assets/images/app/app_icon.png'
@@ -119,11 +126,11 @@ flutter_icons:
   ios: true
 
 flutter_rename_app:
-  application_name: Engage App
-  dart_package_name: engage_app
-  application_id: com.android.engage_app
-  bundle_id: com.ios.engage_app
-  android_package_name: com.AMI.engage_app
+  application_name: Task Queues App
+  dart_package_name: task_queues_app
+  application_id: com.android.task_queues_app
+  bundle_id: com.ios.task_queues_app
+  android_package_name: com.AMI.task_queues_app
 
 #flutter pub run flutter_rename_app
 include: package:pedantic/analysis_options.yaml
